--- a/week1/shopping website project/products.css
+++ b/week1/shopping website project/products.css
@@ -38,11 +38,15 @@ div > * {
 }
 
 .circle {
-    width: 50px;
-    height: 50px;
+    width: 5vw;
+    height: 5vw;
     border-radius: 50%;
     background-color: rgb(198,59,52);
     position: absolute;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+   
 }
 
 .new {
@@ -55,6 +59,7 @@ div > * {
     margin: 16px auto;
     color: white;
     font-weight: bold;
+    font-size: 1.8vw;
 }
 
 .disc {
