--- a/week1/login page/style.css
+++ b/week1/login page/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    background-color: rgb(245,245,245);
 }
 
 .column {
@@ -10,15 +11,18 @@
     width: 50%;
     float: left;
     text-align: center;
+    background-color: rgb(245,245,245);
 }
 
 .hello {
     float: right;
+    background-image: linear-gradient(to bottom, rgb(42,34,56), rgb(111,40,133));
+    height: 100vh;
 }
 
 .login h1 {
     font-size: 2.5rem;
-    padding-top: 80px;
+    padding-top: 160px;
     margin-bottom: 20px;
 }
 
@@ -26,7 +30,7 @@
     width: 70%;
     height: 5vh;
     margin: 10px;
-    background-color: rgb(238,238,238);
+    background-color: rgb(225,225,225);
     border: none;
     padding: 10px;
 }
@@ -55,7 +59,6 @@
     margin-right: 5px;
 }
 
-
 button {
     width: 70%;
     height: 5vh;
@@ -78,24 +81,70 @@ button {
 }
 
 .line hr {
-    width: 75px;
+    width: 15%;
     vertical-align: middle;
     margin-left: 20px;
     margin-right: 20px;
 }
 
-i {
+.icons i {
     font-size: 1.5rem;
     color: lightgray;
     margin-top: 25px;
-    padding: 5px;
+    padding: 10px;
 }
 
 footer {
-    font-size: 0.7rem;
-    color: lightgray; 
+    font-size: 0.8rem;
+    color: grey; 
     position: absolute;
     bottom: 0;
     width: 50%;
     height: 30px;
+}
+
+.hello > * {
+    background-color: transparent;
+}
+ 
+.hello i {
+    font-size: 5rem;
+    padding-top: 280px;
+    color: white;
+    padding-bottom: 20px;
+}
+
+.reg i {
+    font-size: 1.2rem;
+    padding: 0;
+}
+
+.hello h1 {
+    font-size: 2.5rem;
+    color: white;
+}
+
+.text {
+    color: white;
+    padding: 20px;
+    font-size: 0.8rem;
+    font-weight: 300;
+}
+
+.reg > * {
+    display: inline-block;
+    vertical-align: middle;
+    background-color: transparent;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+.reg {
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 10px;
+    width: 40%;
+    margin: 10px auto;
+    height: 50px;
 }
