--- a/week1/avengers/style.css
+++ b/week1/avengers/style.css
@@ -75,3 +75,51 @@ footer div {
 footer div a {
     color: white;
 }
+
+@media screen and (min-width: 600px) {
+    section h1 {
+        font-size: 25px;
+    }
+    header {
+        background-color: yellow;
+    }
+    li {
+        color: black;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    section h1 {
+        font-size: 35px;
+    }
+    header {
+        background-color: lightgreen;
+    }
+    li {
+        color: black;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    header {
+        background-color: red;
+    }
+    li {
+        color: white;
+    }
+    section h1, section p {
+        display: inline-block;
+        margin-top: 150px;
+        
+    }
+
+}
+
+@media screen and (min-width:1200px) {
+    header {
+        background-color: gray;
+    }
+    li {
+        color: yellow;
+    }
+}
