--- a/week1/login page/style.css
+++ b/week1/login page/style.css
@@ -87,6 +87,8 @@ button {
     margin-right: 20px;
 }
 
+/* try to put a text over line */
+
 .icons i {
     font-size: 1.5rem;
     color: lightgray;
