--- a/week1/css_pattern/style.css
+++ b/week1/css_pattern/style.css
@@ -7,7 +7,7 @@
 body {
     display: flex;
     border: 1px solid red;
-    height: 50vh;
+    height: fit-content;
     justify-content: space-between;
     align-items: center;
 }
@@ -15,8 +15,10 @@ body {
 .item {
     background-color: yellow;
     border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    width: 45px;
+    height: 45px;
+    margin: 15px 15px;
+    padding: 10px;
 }
 
 .one {
