--- a/Portfolio Project/style.css
+++ b/Portfolio Project/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Rajdhani', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,7 +24,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 15vw;
+    width: 14vw;
     padding-left: 1rem;
 }
 
@@ -80,9 +81,9 @@ ul li a:hover {
 .about {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 3fr;
     margin: 15rem auto;
-    width: 90vw;
+    width: 70vw;
     /* border: 3px solid red; */
     border-radius: 0.5rem;
     background-color: white;
@@ -95,9 +96,10 @@ ul li a:hover {
 }
 
 .about_1 {
-    grid-column: 1 / 3;
+    grid-column: span 3;
     text-align: center;
     font-size: 2rem;
+    /* border: 3px solid red; */
 }
 
 .about_2 {
@@ -134,8 +136,8 @@ ul li a:hover {
     display: grid;
     grid-template-columns: repeat(8, auto);
     grid-template-rows: 1fr 2fr 2fr;
-    margin: 15rem auto;
-    width: 90vw;
+    margin: 15rem auto 10rem;
+    width: 70vw;
     /* border: 3px solid red; */
     border-radius: 0.5rem;
     background-color: white;
@@ -212,22 +214,22 @@ ul li a:hover {
     grid-column: span 2;
 }
 .item_5 {
-    background-color: orange;
+    background-color: lightcoral;
     grid-column: span 2;
 }
 
 .item_6 {
-    background-color: gray;
+    background-color: skyblue;
     grid-column: span 3;
 }
 
 .item_7 {
-    background-color: green;
+    background-color: purple;
     grid-column: span 3;
 }
 
 .contact {
-    margin: 15rem auto;
+    margin: 10rem auto 5rem;
     padding: 2rem;
     width: 60vw;
     /* border: 1px solid blue; */
@@ -299,11 +301,12 @@ ul li a:hover {
     margin-top: 5rem;
     display: flex;
     justify-content: space-between;
-    width: 50vw;
+    width: 30vw;
+    height: fit-content;
 }
 
 .icons i {
-    font-size: 3rem;
+    font-size: 2rem;
     padding: 1rem;
     transition:all 0.3s ease;
     color: rgb(68, 88, 68);
