--- a/Portfolio Project/style.css
+++ b/Portfolio Project/style.css
@@ -88,6 +88,7 @@ ul li a:hover {
     border-radius: 0.5rem;
     background-color: white;
     box-shadow: 0.3rem 0.3rem 0.8rem rgb(188, 215, 179);
+    padding-top: 2.2rem;
 }
 
 .about > * {
@@ -142,6 +143,7 @@ ul li a:hover {
     border-radius: 0.5rem;
     background-color: white;
     box-shadow: 0.3rem 0.3rem 0.8rem rgb(188, 215, 179);
+    padding-top: 2.2rem;
 }
 
 .projects > * {
@@ -242,6 +244,7 @@ ul li a:hover {
     /* border: 1px solid blue; */
     border-radius: 0.5rem;
     padding: 1rem;
+    padding-top: 0;
     text-align: center;
 }
 
@@ -252,7 +255,7 @@ ul li a:hover {
     border: 0.5px solid gray;
     background-color: rgba(255, 255, 255,0.7);
     border-radius: 0.5rem;
-    width: 20vw;
+    width: 300px;
 
 }
 
@@ -270,7 +273,9 @@ ul li a:hover {
     display: block;
     margin: 0 auto;
     margin-top: 1rem;
-    width: 40vw;
+    width: 300px;
+    height: 100px;
+
     font-size: 1rem;
     padding: 0.5rem;
     border: 0.5px solid gray;
