--- a/Week5/Day1/ExercisesXP/animal-info/animals/info/templates/animal.html
+++ b/Week5/Day1/ExercisesXP/animal-info/animals/info/templates/animal.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Hello, it's animal page!</h1>
-    {{animals}}
+    {{Name}}
+    {{Legs}}
+    {{Weight}}
+    {{Height}}
+    {{Speed}}
 </body>
 </html>
