--- a/Week5/Day2/XP/animals_top/info/templates/animals.html
+++ b/Week5/Day2/XP/animals_top/info/templates/animals.html
@@ -7,18 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Hello!
-    </h1>
-    <!-- {{sorted_people}} -->
-
-    {% for person in sorted_people %}
-    <p>
-        {{person}}
-    </p>
+    <h1>Hi! It's Animals Page</h1>
+    {% for i in data %}
+            {{i}}
     {% endfor %}
-
-
-
 </body>
 </html>
