--- a/Week5/Day2/XP/animals_top/info/templates/animal.html
+++ b/Week5/Day2/XP/animals_top/info/templates/animal.html
@@ -7,18 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Hello!
-    </h1>
-    <!-- {{sorted_people}} -->
-
-    {% for person in sorted_people %}
-    <p>
-        {{person}}
-    </p>
-    {% endfor %}
-
-
-
+    <h1>Hi! It's an animal page</h1>
+    {{data}}
 </body>
 </html>
