Day2 XP renewed

--- a/Week5/Day2/XP/animals_top/info/templates/animal.html
+++ b/Week5/Day2/XP/animals_top/info/templates/animal.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi! It's an animal page</h1>
-    {{data}}
+    <h1>It's Animal page</h1>
+    {{animal_one.name}}
 </body>
 </html>
