Update on 'Done' button in w4d4 xp

--- a/Week5/Day4/XP/todo_top/todo_app/templates/display_todos.html
+++ b/Week5/Day4/XP/todo_top/todo_app/templates/display_todos.html
@@ -12,7 +12,10 @@
     {% for todo in todo_list %}
         <ul>
             <li>{{todo}}</li>
-            <button type="submit" name="done">Done</button>
+            <form action="{% url 'todo_done' todo.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" name="done">Done</button>
+            </form>
         </ul>
     {% endfor %}
 
