--- a/Week6/Day2/imdi/FilmProject_top/templates/partials/navbar.html
+++ b/Week6/Day2/imdi/FilmProject_top/templates/partials/navbar.html
@@ -1,17 +1,19 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="{% url 'homepage' %}">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if user.is_superuser %}
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'add-film'%}">Add film</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'add-director'%}">Add director</a>
           </li>
+          {% endif %}
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
