--- a/Week6/Day3/imdi/FilmProject_top/films/templates/homepage.html
+++ b/Week6/Day3/imdi/FilmProject_top/films/templates/homepage.html
@@ -16,7 +16,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <img style="width: 100%; height: auto; margin-bottom: 10px;"  src="{{ film.poster.image }}" alt="{{ film.poster.explanation_img }}">
-                        <h5 class="card-title">{{ film.title }}</h5>
+                        <h5 class="card-title"><a href="{% url 'detail' film.id %}">{{ film.title }}</a></h5>
                         <h5 class="card-title">{{ film.release_date }}</h5>
                         <a href="{% url 'delete-film' film.id %}">Delete</a>
                         <p class="card-title">Rating:
