--- a/Week6/Day3/imdi/FilmProject_top/templates/partials/base.html
+++ b/Week6/Day3/imdi/FilmProject_top/templates/partials/base.html
@@ -10,7 +10,7 @@
     {% bootstrap_javascript %}
    
 </head>
-<body style="margin: 10px; padding: 10px;">
+<body style="margin: 10px; padding: 10px; background-color: rgb(126, 161, 240); color: rgb(79, 80, 82); font-size: 18px;">
     {% include 'navbar.html' %}
 
     Current user: {{user}}
