--- a/Week8/Day5/Miniproject/style.css
+++ b/Week8/Day5/Miniproject/style.css
@@ -109,3 +109,9 @@ a {
     text-decoration: none;
     color: black;
 }
+
+.alert {
+    text-align: center;
+    font-family: 'Martian Mono', monospace;
+    font-size: 22px;
+}
